--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,7 @@
     </a>
 </div>
 
-<div class="ui attached segment" ng-init="testeFront.carregarTabela()">
+<div class="ui attached segment">
     <div class="table-responsive">
         <table ng-table="tableParams" show-filter="true" class="ui very basic compact table unstackable">
             <tbody>
